# buddy

./: .dockerignore  .gitignore  .replit  2022_01_01_Unknown.csv  2022_01_03_Basic Materials.csv  2022_01_03_Communication Services.csv  2022_01_03_Consumer Cyclical.csv  2022_01_03_Consumer Defensive.csv  2022_01_03_Energy.csv  2022_01_03_Financial Services.csv  2022_01_03_Healthcare.csv  2022_01_03_Industrials.csv  2022_01_03_Technology.csv  2022_01_03_US_ETF.csv  2022_01_03_nan.csv  2022_01_03_기타 금융업.csv  Dockerfile  Procfile  README.md  UsaStockAutoTrade.py  app.py  bot.py  docker-compose.yml  earnig_data.csv  heroku.yml  main.py  package.json  pyproject.toml  replit.nix  requirements.txt  result_086520.csv  result_AAPL.csv  result_ADBE.csv  result_ADSK.csv  result_ALB.csv  result_AMD.csv  result_AMZN.csv  result_APTV.csv  result_BA.csv  result_BAC.csv  (+78 more)
my-app/: index.js  package.json
my-app/src/: App.js
my-flask-app/: Dockerfile  bot.py  main.py
my-flask-app/templates/: index.html
my-node-app/: Dockerfile  package.json  requirements.txt
my-node-app/src/: App.js
templates/: index.html
